--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
                   </div>
                 </div>
 
-                <div class="col-sm-8">
+                <div class="col-sm-8 ms-5">
                     <form action="#">
                         <div class="row mb-4">
                             <div class="col sm 6">
