--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/bootstrap.bundle.js"></script>
+    <link href="images/SACHIT.jpg" rel="icon" />
     <title>MkWebpage</title>
 </head>
 <body>
